--- a/sdk/rust/Cargo.toml
+++ b/sdk/rust/Cargo.toml
@@ -12,7 +12,7 @@ license = "MIT OR Apache-2.0"
 name = "datastar"
 readme = "README.md"
 repository = "https://github.com/starfederation/datastar-rs"
-version = "0.1.0"
+version = "0.1.0-beta.1"
 rust-version = "1.85.0"
 
 [dev-dependencies]
