fix(python): uncomment fasthtml, use correct name

--- a/sdk/python/pyproject.toml
+++ b/sdk/python/pyproject.toml
@@ -37,7 +37,7 @@ build-backend = "hatchling.build"
 dev = [
     "django>=4.2.17",
     "fastapi[standard]>=0.115.4",
-    #    "fasthtml>=0.12.0",
+    "python-fasthtml>=0.12.0; python_version > '3.10'",
     "flask[async]>=3.0.3",
     "quart>=0.19.9",
     "sanic>=24.6.0",
