Max 5 keywords allowed

--- a/sdk/rust/Cargo.toml
+++ b/sdk/rust/Cargo.toml
@@ -8,7 +8,7 @@ description = "Datastar SDK for Rust"
 documentation = "https://docs.rs/datastar"
 edition = "2024"
 homepage = "https://data-star.dev"
-keywords = ["datastar", "web", "backend", "axum", "rama", "rocket"]
+keywords = ["datastar", "backend", "axum", "rama", "rocket"]
 license = "MIT OR Apache-2.0"
 name = "datastar"
 readme = "README.md"
