remove matchit from unused deps
add machete to make tools for rust sdk
so that we as maintainers can easily keep track
of such unused deps

--- a/sdk/rust/Makefile
+++ b/sdk/rust/Makefile
@@ -2,18 +2,19 @@
 
 all:
 	@echo "Usage:"
-	@echo "fmt           - run the rust formatter"
-	@echo "sort          - sort TOML dependencies"
-	@echo "lint          - combine fmt+sort"
-	@echo "check         - shallow check of rust code (pre-compile)"
-	@echo "clippy        - run clippy checks"
-	@echo "doc           - doc checks"
-	@echo "hack          - test feature matrix compatibility"
-	@echo "test          - run all unit and doc tests"
-	@echo "qa            - combine lint+check+clippy+doc+hack+test"
-	@echo "hello-axum    - run hello-world example using the Axum framework"
-	@echo "hello-rama    - run hello-world example using the Rama framework"
-	@echo "hello-rocket  - run hello-world example using the Rocket framework"
+	@echo "fmt                  - run the rust formatter"
+	@echo "sort                 - sort TOML dependencies"
+	@echo "lint                 - combine fmt+sort"
+	@echo "check                - shallow check of rust code (pre-compile)"
+	@echo "clippy               - run clippy checks"
+	@echo "doc                  - doc checks"
+	@echo "hack                 - test feature matrix compatibility"
+	@echo "test                 - run all unit and doc tests"
+	@echo "qa                   - combine lint+check+clippy+doc+hack+test"
+	@echo "detect-unused-deps"  - detect unused deps for removal"
+	@echo "hello-axum           - run hello-world example using the Axum framework"
+	@echo "hello-rama           - run hello-world example using the Rama framework"
+	@echo "hello-rocket         - run hello-world example using the Rocket framework"
 .PHONY:
 
 fmt:
@@ -40,6 +41,10 @@ test:
 	cargo test --all-features --workspace
 
 qa: lint check clippy doc test
+
+detect-unused-deps:
+    # https://github.com/bnjbvr/cargo-machete
+	cargo machete --skip-target-dir
 
 hello-axum:
 	cd ../../examples/rust/axum/hello-world && cargo run
