ensure examples are also qa'd + apply feedback

--- a/examples/rust/makefile.defs
+++ b/examples/rust/makefile.defs
@@ -12,9 +12,7 @@ all:
 	@echo "test                 - run all unit and doc tests"
 	@echo "qa                   - combine lint+check+clippy+doc+hack+test"
 	@echo "detect-unused-deps   - detect unused deps for removal"
-	@echo "hello-axum           - run hello-world example using the Axum framework"
-	@echo "hello-rama           - run hello-world example using the Rama framework"
-	@echo "hello-rocket         - run hello-world example using the Rocket framework"
+	@echo "run                  - run this example"
 .PHONY:
 
 fmt:
@@ -41,19 +39,10 @@ test:
 	cargo test --all-features --workspace
 
 qa: lint check clippy doc test
-	cd ../../examples/rust/axum/hello-world && make qa
-	cd ../../examples/rust/rama/hello-world && make qa
-	cd ../../examples/rust/rocket/hello-world && make qa
 
 detect-unused-deps:
     # https://github.com/bnjbvr/cargo-machete
 	cargo machete --skip-target-dir
 
-hello-axum:
-	cd ../../examples/rust/axum/hello-world && make run
-
-hello-rama:
-	cd ../../examples/rust/rama/hello-world && make run
-
-hello-rocket:
-	cd ../../examples/rust/rocket/hello-world && make run
+run:
+	cargo run
