--- a/sdk/rust/Cargo.toml
+++ b/sdk/rust/Cargo.toml
@@ -54,12 +54,13 @@ type_complexity = "allow"
 axum = { version = "0.8.3", default-features = false, optional = true, features = [
     "query",
     "tokio",
+    "json",
 ] }
 bytes = { version = "1", default-features = false, optional = true }
 futures-util = { version = "0.3", default-features = false }
 http-body = { version = "1.0", default-features = false, optional = true }
 pin-project-lite = { version = "0.2", default-features = false, optional = true }
-rama = { version = "0.2.0-alpha.12", default-features = false, optional = true, features = [
+rama = { version = "0.2.0-alpha.13", default-features = false, optional = true, features = [
     "http",
 ] }
 rocket = { version = "0.5.1", default-features = false, optional = true }
@@ -70,15 +71,20 @@ serde_json = { version = "1", default-features = false, optional = true, feature
     "std",
 ] }
 sync_wrapper = { version = "1", default-features = false, optional = true }
+tracing = { version = "0.1.41", optional = true }
 
 [dev-dependencies]
 async-stream = { version = "0.3.6", default-features = false }
 axum = { version = "0.8.3" }
-rama = { version = "0.2.0-alpha.12", features = ["http-full"] }
+rama = { version = "0.2.0-alpha.13", features = ["http-full"] }
+reqwest = { version = "0.12.15", features = ["json", "stream"] }
 rocket = { version = "0.5.1", features = ["json"] }
 serde = { version = "1", default-features = false, features = ["derive"] }
 serde_json = { version = "1", default-features = false, features = ["std"] }
 tokio = { version = "1.44.2", features = ["full"] }
+tokio-stream = { version = "0.1.17" }
+tracing = { version = "0.1.41" }
+tracing-test = { version = "0.2.5" }
 
 [features]
 axum = [
@@ -92,6 +98,7 @@ axum = [
 http2 = []
 rocket = ["dep:rocket"]
 rama = [
+    "tracing",              # rama _always_ comes with tracing
     "dep:rama",
     "dep:serde",
     "dep:serde_json",
@@ -99,6 +106,7 @@ rama = [
     "dep:bytes",
     "dep:sync_wrapper",
 ]
+tracing = ["dep:tracing"]
 
 [profile.dev]
 opt-level = 1
