--- a/sdk/typescript/package.json
+++ b/sdk/typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@starfederation/datastar-sdk",
-  "version": "0.0.1",
+  "version": "1.0.0-beta.11",
   "description": "TypeScript SDK for Datastar",
   "scripts": {
     "check": "deno lint && deno check src/node/node.ts && deno check src/web/deno.ts",
