--- a/sdk/python/pyproject.toml
+++ b/sdk/python/pyproject.toml
@@ -10,7 +10,7 @@ requires-python = ">=3.9"
 dependencies = []
 dynamic=["version"]
 license = {text = "MIT"}
-keywords = ["datastar", "django", "fastapi", "fasthtml", "flask", "quart", "sanic", "html"]
+keywords = ["datastar", "django", "fastapi", "fasthtml", "flask", "litestar", "quart", "sanic", "starlette", "html"]
 classifiers = [
   "Development Status :: 4 - Beta",
   "Programming Language :: Python",
