Python SDK: Basic litestar support (#878)
* Basic litestar support in the python SDK

* Add keywords to python sdk for added frameworks

--- a/sdk/python/pyproject.toml
+++ b/sdk/python/pyproject.toml
@@ -10,7 +10,7 @@ requires-python = ">=3.9"
 dependencies = []
 dynamic=["version"]
 license = {text = "MIT"}
-keywords = ["datastar", "django", "fastapi", "fasthtml", "flask", "quart", "sanic", "html"]
+keywords = ["datastar", "django", "fastapi", "fasthtml", "flask", "litestar", "quart", "sanic", "starlette", "html"]
 classifiers = [
   "Development Status :: 4 - Beta",
   "Programming Language :: Python",
@@ -43,6 +43,7 @@ dev = [
     "sanic>=24.6.0",
     "starlette>=0.46.1",
     "uvicorn>=0.32.1",
+    "litestar>=2.15.2",
 ]
 
 [tool.hatch.version]
