Add examples of read_signals into all the python framework examples

--- a/examples/python/django/pyproject.toml
+++ b/examples/python/django/pyproject.toml
@@ -9,3 +9,6 @@ dependencies = [
     "datastar-py>=0.4.3",
     "django>=5.1.7",
 ]
+
+[tool.uv.sources]
+datastar-py = { path = "../../../sdk/python" }
