Clean up code for python sdk and examples: - Add settings and lint/format all files with ruff - Update all examples to use datastar 1.0 beta 11 - Make all examples executable directly with uv

--- a/sdk/python/pyproject.toml
+++ b/sdk/python/pyproject.toml
@@ -84,3 +84,25 @@ commit_args = ""
 setup_hooks = []
 pre_commit_hooks = []
 post_commit_hooks = []
+
+[tool.ruff]
+line-length = 99
+exclude = [
+  "src/datastar_py/consts.py",
+]
+[tool.ruff.lint]
+select = [
+    # pycodestyle
+    "E",
+    # Pyflakes
+    "F",
+    # pyupgrade
+    "UP",
+    # flake8-bugbear
+    "B",
+    # flake8-simplify
+    "SIM",
+    # isort
+    "I",
+]
+fixable = ["ALL"]
