Moving Examples to their own directory.
First port from the F# code to C#.

--- a/.github/workflows/sdk-dotnet-nuget.yml
+++ b/.github/workflows/sdk-dotnet-nuget.yml
@@ -21,25 +21,13 @@ jobs:
         dotnet-version: 9.0.x
 
     - name: Build and Pack NuGet package with versioning
-      run: dotnet pack sdk/dotnet/src/Datastar.fsproj --configuration Release --output ${{ env.NuGetDirectory }}
+      run: dotnet pack sdk/dotnet/src/Starfederation.Datastar/Starfederation.Datastar.csproj --configuration Release --output ${{ env.NuGetDirectory }}
+
+    - name: Publish to NuGet.org
+      run: dotnet nuget push nugetPackage/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
 
     - name: Upload NuGet package to GitHub
       uses: actions/upload-artifact@v4
       with:
         name: nugetPackage
         path: ${{ env.NuGetDirectory }}/*.nupkg
-
-  release:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-
-    - name: Download nuget package artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: nugetPackage
-        path: nugetPackage
-
-    - name: Publish to NuGet.org
-      run: dotnet nuget push nugetPackage/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
