--- a/sdk/dotnet/src/Directory.Packages.props
+++ b/sdk/dotnet/src/Directory.Packages.props
@@ -6,6 +6,8 @@
     <PackageVersion Include="Microsoft.AspNetCore.Components" Version="9.0.5" />
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.5" />
     <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
+    <PackageVersion Include="Microsoft.Extensions.Http" Version="9.0.5" />
+    <PackageVersion Include="System.Text.Json" Version="9.0.5" />
     <PackageVersion Include="TUnit" Version="0.19.148" />
   </ItemGroup>
 </Project>
