--- a/sdk/dotnet/src/Directory.Packages.props
+++ b/sdk/dotnet/src/Directory.Packages.props
@@ -7,7 +7,10 @@
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.5" />
     <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
     <PackageVersion Include="Microsoft.Extensions.Http" Version="9.0.5" />
+    <PackageVersion Include="NetEscapades.EnumGenerators" Version="1.0.0-beta13" />
+    <PackageVersion Include="NetEscapades.EnumGenerators.Interceptors" Version="1.0.0-beta13" />
     <PackageVersion Include="System.Text.Json" Version="9.0.5" />
     <PackageVersion Include="TUnit" Version="0.19.148" />
+    <PackageVersion Include="ZString" Version="2.6.0" />
   </ItemGroup>
 </Project>
