--- a/sdk/java/core/pom.xml
+++ b/sdk/java/core/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://www.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.starfederation</groupId>
+        <groupId>dev.data-star</groupId>
         <artifactId>datastar-java-sdk-suite</artifactId>
         <version>1.0.0</version>
     </parent>
