Cleaning up the project, using Blazor SSR as the example now as it is more complete. Removing tailwind, adding PicoCSS.
Added all necessary extensions, made them as fast as possible allocating less ram than the F# counter part.

Renamed the datastar.js to contain the version so it can be properly cached

--- a/sdk/dotnet/csharp/src/StarFederation.Datastar.Tests/StarFederation.Datastar.Tests.csproj
+++ b/sdk/dotnet/csharp/src/StarFederation.Datastar.Tests/StarFederation.Datastar.Tests.csproj
@@ -10,7 +10,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Examples\StarFederation.Datastar.MinimalBlazor\StarFederation.Datastar.MinimalBlazor.csproj" />
+      <ProjectReference Include="..\StarFederation.Datastar.Example\StarFederation.Datastar.Example.csproj" />
     </ItemGroup>
 
 
