--- a/sdk/dotnet/csharp/src/Directory.Build.props
+++ b/sdk/dotnet/csharp/src/Directory.Build.props
@@ -1,6 +1,6 @@
 <Project>
     <PropertyGroup>
-        <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
+        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <LangVersion>preview</LangVersion>
 
