--- a/sdk/dotnet/csharp/src/StarFederation.Datastar.Example/Properties/launchSettings.json
+++ b/sdk/dotnet/csharp/src/StarFederation.Datastar.Example/Properties/launchSettings.json
@@ -4,7 +4,7 @@
       "http": {
         "commandName": "Project",
         "dotnetRunMessages": true,
-        "launchBrowser": true,
+        "launchBrowser": false,
         "applicationUrl": "http://localhost:5269",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
@@ -13,7 +13,7 @@
       "https": {
         "commandName": "Project",
         "dotnetRunMessages": true,
-        "launchBrowser": true,
+        "launchBrowser": false,
         "applicationUrl": "https://localhost:7142;http://localhost:5269",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
