--- a/examples/dotnet/csharp/HelloWorld/HelloWorld.csproj
+++ b/examples/dotnet/csharp/HelloWorld/HelloWorld.csproj
@@ -8,11 +8,10 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3"/>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\sdk\dotnet\src\Datastar.fsproj" />
+      <ProjectReference Include="..\..\..\..\sdk\dotnet\fsharp\src\Datastar.FSharp.fsproj" />
     </ItemGroup>
 
 </Project>
