Make datastar opinionated about taking 0..N datastar events

--- a/sdk/python/pyproject.toml
+++ b/sdk/python/pyproject.toml
@@ -104,5 +104,9 @@ select = [
     "SIM",
     # isort
     "I",
+    # Annotations
+    "ANN",
+    # Ruff specific
+    "RUF",
 ]
 fixable = ["ALL"]
