- Added Clojure snippets using :keyword syntax for Datastar attributes - Registered data-attributes-clj.json for .clj files in package.json - Updated snippet prefixes to :data-* and bodies to use Clojure Hiccup style

--- a/tools/vscode-extension/package.json
+++ b/tools/vscode-extension/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datastar-vscode",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "displayName": "Datastar",
   "description": "Adds autocomplete for Datastar to Visual Studio Code.",
   "author": "Ben Croker",
@@ -20,6 +20,10 @@
       {
         "language": "html",
         "path": "./src/data-attributes.json"
+      },
+      {
+        "language": "clojure",
+        "path": "./src/data-attributes-clj.json"
       }
     ]
   },
