--- a/sdk/typescript/package.json
+++ b/sdk/typescript/package.json
@@ -3,9 +3,14 @@
   "version": "1.0.0-beta.11",
   "description": "TypeScript SDK for Datastar",
   "scripts": {
-    "check": "deno lint && deno check src/node/node.ts && deno check src/web/deno.ts",
+    "check": "deno lint && deno check src/node/node.ts && deno check src/web/deno.ts && bun run --check src/web/bun.ts",
+    "build": "deno run -A build.ts",
     "serve-deno": "deno run -A src/web/deno.ts",
-    "serve-node": "deno run -A build.ts && node npm/esm/node/node.js"
+    "serve-bun": "bun run src/web/bun.ts",
+    "serve-node": "deno run -A build.ts && node npm/esm/node/node.js",
+    "test-node": "./test/test-node.sh",
+    "test-deno": "./test/test-deno.sh",
+    "test-bun": "./test/test-bun.sh"
   },
   "type": "module",
   "repository": {
