Update TypeScript SDK: Move test servers files to enhance clarity, modify build process, and adjust tsconfig accordingly.

--- a/sdk/typescript/tsconfig.json
+++ b/sdk/typescript/tsconfig.json
@@ -9,14 +9,15 @@
     "strict": true,
     "noUncheckedIndexedAccess": true,
     "noImplicitOverride": true,
-
     "module": "commonjs",
     "outDir": "dist",
     "sourceMap": true,
-
     "declaration": true,
-    "lib": ["es2022"]
+    "lib": [
+      "es2022"
+    ]
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["src/web/deno.ts"]
+  "include": [
+    "src/**/*.ts"
+  ],
 }
