--- a/sdk/typescript/package.json
+++ b/sdk/typescript/package.json
@@ -37,7 +37,6 @@
   },
   "devDependencies": {
     "typescript": "~5.6.2",
-    "@types/node": "^22.10.2",
-    "type-fest": "^4.32.0"
+    "@types/node": "^22.10.2"
   }
 }
