dotnet/sdk Release candidate (#956)
* sdk/dotnet - merge to patch, fragment to element. IDatastarService introduced

* sdk/dotnet - snippets updated

# Conflicts:
#	site/static/code_snippets/getting_started/multiple_events.csharpsnippet
#	site/static/code_snippets/getting_started/setup.csharpsnippet
#	site/static/code_snippets/going_deeper/multiple_events.csharpsnippet
#	site/static/code_snippets/how_tos/load_more.csharpsnippet
#	site/static/code_snippets/how_tos/polling_1.csharpsnippet
#	site/static/code_snippets/how_tos/polling_2.csharpsnippet
#	site/static/code_snippets/how_tos/redirect_1.csharpsnippet
#	site/static/code_snippets/how_tos/redirect_2.csharpsnippet

* sdk/dotnet - Examples updated

* sdk/dotnet-nugets - renamed the workflows for creating nugets

* sdk/dotnet - avoid repeated locking. avoid out of order sses

* sdk/dotnet - zero allocation updates

* sdk/dotnet - Consts updated

* sdk/dotnet - even more optimizations on c# side

---------

Co-authored-by: Greg Holden <SpiralOSS@users.noreply.github.com>

--- a/sdk/dotnet/fsharp/src/StarFederation.Datastar.FSharp.fsproj
+++ b/sdk/dotnet/fsharp/src/StarFederation.Datastar.FSharp.fsproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <AssemblyName>StarFederation.Datastar.FSharp</AssemblyName>
-        <Version>1.0.0-beta.1</Version>
+        <Version>1.0.0-beta.2</Version>
         <RootNamespace>StarFederation.Datastar.FSharp</RootNamespace>
         <Nullable>disabled</Nullable>
 
@@ -49,11 +49,11 @@
         <Content Include="..\..\README.md">
           <Link>README.md</Link>
         </Content>
-        <Compile Include="Utility.fs" />
         <Compile Include="Consts.fs" />
+        <Compile Include="Utility.fs" />
         <Compile Include="Types.fs" />
+        <Compile Include="ServerSentEvent.fs" />
         <Compile Include="ServerSentEventGenerator.fs" />
-        <Compile Include="HttpHandlers.fs" />
     </ItemGroup>
 
 </Project>
