--- a/examples/rust/axum/test-suite/Cargo.toml
+++ b/examples/rust/axum/test-suite/Cargo.toml
@@ -8,6 +8,7 @@ rust-version = "1.85.0"
 async-stream = "0.3.6"
 axum = "0.8.4"
 datastar = { path = "../../../../sdk/rust", features = ["axum"] }
+indexmap = { version = "2.10", features = ["serde"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = { version = "1" }
 tokio = { version = "1.46.1", features = ["full"] }
