--- a/sdk/typescript/examples/node/package.json
+++ b/sdk/typescript/examples/node/package.json
@@ -9,6 +9,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "datastar-sdk": "^1.0.0-beta.11"
+    "datastar-sdk": "^1.0.0-RC.1"
   }
 }
