Remove deepmerge-ts dependency, and refactor server-sent event generator to eliminate deepmerge usage. Update lock files accordingly.

--- a/sdk/typescript/package.json
+++ b/sdk/typescript/package.json
@@ -32,9 +32,7 @@
     "npm/README.md",
     "README.md"
   ],
-  "dependencies": {
-    "deepmerge-ts": "^7.1.4"
-  },
+  "dependencies": {},
   "devDependencies": {
     "typescript": "~5.6.2",
     "@types/node": "^22.10.2"
