--- a/sdk/typescript/package.json
+++ b/sdk/typescript/package.json
@@ -1,11 +1,16 @@
 {
   "name": "@starfederation/datastar-sdk",
-  "version": "1.0.0-beta.11",
+  "version": "1.0.0-RC.1",
   "description": "TypeScript SDK for Datastar",
   "scripts": {
-    "check": "deno lint && deno check src/node/node.ts && deno check src/web/deno.ts",
-    "serve-deno": "deno run -A src/web/deno.ts",
-    "serve-node": "deno run -A build.ts && node npm/esm/node/node.js"
+    "check": "deno lint && deno check src/node/node.ts && deno check src/web/deno.ts && bun run --check src/web/bun.ts",
+    "build": "deno run -A build.ts",
+    "serve-deno": "deno run -A test/deno.ts",
+    "serve-bun": "bun run test/bun.ts",
+    "serve-node": "deno run -A build.ts && node npm/esm/test/node.js",
+    "test-node": "./test/test-node.sh",
+    "test-deno": "./test/test-deno.sh",
+    "test-bun": "./test/test-bun.sh"
   },
   "type": "module",
   "repository": {
@@ -18,12 +23,18 @@
     "url": "https://github.com/starfederation/datastar/issues"
   },
   "homepage": "https://github.com/starfederation/datastar#readme",
-  "dependencies": {
-    "deepmerge-ts": "^7.1.4"
-  },
+  "files": [
+    "npm/script/src/",
+    "npm/script/package.json",
+    "npm/esm/src/",
+    "npm/esm/package.json",
+    "npm/package.json",
+    "npm/README.md",
+    "README.md"
+  ],
+  "dependencies": {},
   "devDependencies": {
     "typescript": "~5.6.2",
-    "@types/node": "^22.10.2",
-    "type-fest": "^4.32.0"
+    "@types/node": "^22.10.2"
   }
 }
